docs/ganeti/2.1/html/_sources/install-quick.txt
.. This file is automatically updated at build time from INSTALL.
.. Do not edit.

Ganeti quick installation guide
===============================

Please note that a more detailed installation procedure is described in
the :doc:`install`. A glossary of terms can be found in the
:doc:`glossary`.


Software Requirements
---------------------

Before installing, please verify that you have the following programs:

- `Xen Hypervisor <http://www.xen.org/>`_, version 3.0 or above, if
  running on Xen
- `KVM Hypervisor <http://www.linux-kvm.org>`_, version 72 or above, if
  running on KVM. In order to use advanced features, such as live
  migration, virtio, etc, an even newer version is recommended (qemu-kvm
  versions 0.11.X or above have shown good behavior).
- `DRBD <http://www.drbd.org/>`_, kernel module and userspace utils,
  version 8.0.7 or above
- `LVM2 <http://sourceware.org/lvm2/>`_
- `OpenSSL <http://www.openssl.org/>`_
- `OpenSSH <http://www.openssh.com/portable.html>`_
- `bridge utilities <http://www.linuxfoundation.org/en/Net:Bridge>`_
- `iproute2 <http://www.linuxfoundation.org/en/Net:Iproute2>`_
- `arping <http://www.skbuff.net/iputils/>`_ (part of iputils)
- `Python <http://www.python.org/>`_, version 2.4 or above, not 3.0
- `Python OpenSSL bindings <http://pyopenssl.sourceforge.net/>`_
- `simplejson Python module <http://code.google.com/p/simplejson/>`_
- `pyparsing Python module <http://pyparsing.wikispaces.com/>`_
- `pyinotify Python module <http://trac.dbzteam.org/pyinotify/>`_
- `ctypes Python module
  <http://starship.python.net/crew/theller/ctypes/>`_, if running on
  python 2.4 (optional, used for node daemon memory locking)
- `socat <http://www.dest-unreach.org/socat/>`_

These programs are supplied as part of most Linux distributions, so
usually they can be installed via the standard package manager. Also
many of them will already be installed on a standard machine. On
Debian/Ubuntu, you can use this command line to install all required
packages, except for DRBD and Xen::

  $ apt-get install lvm2 ssh bridge-utils iproute iputils-arping \
                    python python-pyopenssl openssl python-pyparsing \
                    python-simplejson python-pyinotify socat

If you want to build from source, please see doc/devnotes.rst for more
dependencies.


Installation of the software
----------------------------

To install, simply run the following command::

  ./configure --localstatedir=/var --sysconfdir=/etc && \
  make && \
  make install

This will install the software under ``/usr/local``. You then need to
copy ``doc/examples/ganeti.initd`` to ``/etc/init.d/ganeti`` and
integrate it into your boot sequence (``chkconfig``, ``update-rc.d``,
etc.).


Cluster initialisation
----------------------

Before initialising the cluster, on each node you need to create the
following directories:

- ``/etc/ganeti``
- ``/var/lib/ganeti``
- ``/var/log/ganeti``
- ``/srv/ganeti``
- ``/srv/ganeti/os``
- ``/srv/ganeti/export``

After this, use ``gnt-cluster init``.

.. vim: set textwidth=72 syntax=rst :
.. Local Variables:
.. mode: rst
.. fill-column: 72
.. End:
